--- a/hospital-backend/package.json
+++ b/hospital-backend/package.json
@@ -1,9 +1,9 @@
 {
   "name": "hospital-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js" 
+    "start": "node api/server.js" 
    
   },
   "keywords": [],
